feat: add projects

--- a/index.html
+++ b/index.html
@@ -69,6 +69,28 @@
             </p>
             <a href="https://github.com/Roachh/react-projects">Github</a>
           </article>
+
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/skincare-seaweed.png" class="image fit thumb"
+              ><img src="images/skincare-seaweed.png" alt="React Projects"
+            /></a>
+            <h3>Skincare Seaweed</h3>
+            <p>Landing page de produto de skincare.</p>
+            <a href="https://skincare-seaweed.netlify.app/">Link</a>
+            /
+            <a href="https://github.com/Roachh/skincare-seaweed">Github</a>
+          </article>
+
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/pet-generator.png" class="image fit thumb"
+              ><img src="images/pet-generator.png" alt="React Projects"
+            /></a>
+            <h3>Pet Generator</h3>
+            <p>Projeto desenvolvido para o Teste Front-End da Tech Pro Bem.</p>
+            <a href="https://pet-generator.netlify.app/">Link</a>
+            /
+            <a href="https://github.com/Roachh/teste-frontend">Github</a>
+          </article>
         </div>
         <!-- <ul class="actions">
           <li><a href="#" class="button">Full Portfolio</a></li>
